# owcli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  openapi.yaml
.cargo/: config.toml
docs/: api-spec-validation.md  api-validation-report.json  api-validation-report.md  nation-colors.md
scripts/: validate-api.py
src/: cli.rs  cli_generated.rs  client.rs  config.rs  error.rs  help.rs  main.rs  path_parser.rs
src/commands/: actions.rs  mod.rs  query.rs
src/map/: colors.rs  data.rs  hex.rs  minimap.rs  mod.rs
src/models/: character.rs  city.rs  command.rs  config.rs  diplomacy.rs  events.rs  mod.rs  player.rs  tile.rs  tribe.rs  unit.rs
src/output/: mod.rs  table.rs  table_generated.rs
src/repl/: completer.rs  mod.rs
