[package]
name = "owcli"
version = "0.1.0"
edition = "2021"
description = "CLI for the Old World game API"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.17"
dotenvy = "0.15"
rustyline = "15"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0"
