[package]
name = "owcli"
version = "0.1.0"
edition = "2021"
description = "CLI for the Old World game API"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.17"
dotenvy = "0.15"
rustyline = "15"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
progenitor-client = "0.8"

[build-dependencies]
progenitor = "0.8"
openapiv3 = "2.2"
serde_json = "1.0"
serde_yaml = "0.9"
prettyplease = "0.2"
syn = "2.0"
